[workspace]
members = ["chat_server", "notify_server"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7.7", features = [
    "http2",
    # "macros",
    "multipart",
    "query",
    "tracing",
] }
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
